[gd_scene load_steps=15 format=2]

[ext_resource path="res://Scenes/MobDummy.gd" type="Script" id=1]
[ext_resource path="res://Scenes/BoatDummy.tscn" type="PackedScene" id=2]
[ext_resource path="res://Scripts/PatrolSelectorBlackboard.gd" type="Script" id=3]
[ext_resource path="res://barHorizontal_green_mid 200.png" type="Texture" id=4]
[ext_resource path="res://Scripts/Move.gd" type="Script" id=5]
[ext_resource path="res://addons/behavior_tree/src/behavior_tree.gd" type="Script" id=6]
[ext_resource path="res://Scripts/isPlayerClose.gd" type="Script" id=7]
[ext_resource path="res://Scripts/isNotNearIsland.gd" type="Script" id=8]
[ext_resource path="res://addons/behavior_tree/src/btnodes/composites/bt_sequence.gd" type="Script" id=9]
[ext_resource path="res://Scripts/moveShootingAngle.gd" type="Script" id=10]
[ext_resource path="res://addons/behavior_tree/src/btnodes/leaves/bt_wait.gd" type="Script" id=11]
[ext_resource path="res://addons/behavior_tree/src/btnodes/composites/bt_selector.gd" type="Script" id=12]
[ext_resource path="res://UI/UI_detection_marker.png" type="Texture" id=13]

[sub_resource type="SphereShape" id=1]
radius = 100.0

[node name="MobDummy" type="Spatial"]
script = ExtResource( 1 )
boat_tween = NodePath("BoatTween")

[node name="Boat" parent="." instance=ExtResource( 2 )]

[node name="AreaDetection" type="Area" parent="Boat"]
collision_layer = 512
collision_mask = 9
monitorable = false

[node name="CollisionShape" type="CollisionShape" parent="Boat/AreaDetection"]
shape = SubResource( 1 )

[node name="DetectionMarker" type="Sprite3D" parent="Boat"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 7.74623, 0 )
billboard = 1
alpha_cut = 1
texture = ExtResource( 13 )

[node name="HealthBar3D" type="Sprite3D" parent="Boat"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 6.04641, 0 )
billboard = 1
alpha_cut = 1
texture = ExtResource( 4 )

[node name="Viewport" type="Viewport" parent="Boat/HealthBar3D"]
size = Vector2( 200, 26 )
transparent_bg = true
usage = 0
render_target_v_flip = true

[node name="HealthBar" type="TextureProgress" parent="Boat/HealthBar3D/Viewport"]
margin_right = 40.0
margin_bottom = 40.0
value = 100.0
texture_under = ExtResource( 4 )
texture_progress = ExtResource( 4 )
tint_under = Color( 0.156863, 0.192157, 0.164706, 1 )

[node name="Blackboard" type="Node" parent="."]
script = ExtResource( 3 )

[node name="BehaviorTree" type="Node" parent="."]
script = ExtResource( 6 )
is_active = true
_blackboard = NodePath("../Blackboard")
_agent = NodePath("..")

[node name="BTSelector" type="Node" parent="BehaviorTree"]
script = ExtResource( 12 )

[node name="AttackSelector" type="Node" parent="BehaviorTree/BTSelector"]
script = ExtResource( 9 )

[node name="isPlayerClose" type="Node" parent="BehaviorTree/BTSelector/AttackSelector"]
script = ExtResource( 7 )

[node name="moveShoot" type="Node" parent="BehaviorTree/BTSelector/AttackSelector"]
script = ExtResource( 10 )
boat = NodePath("../../../../Boat")
mob = NodePath("../../../..")

[node name="PatrolSelector" type="Node" parent="BehaviorTree/BTSelector"]
script = ExtResource( 9 )

[node name="isNotNearIsland" type="Node" parent="BehaviorTree/BTSelector/PatrolSelector"]
script = ExtResource( 8 )
boat = NodePath("../../../../Boat")

[node name="Move5Sec" type="Node" parent="BehaviorTree/BTSelector/PatrolSelector"]
script = ExtResource( 5 )
boat = NodePath("../../../../Boat")
wait_time = 5.0

[node name="Wait5Sec" type="Node" parent="BehaviorTree/BTSelector/PatrolSelector"]
script = ExtResource( 11 )
wait_time = 5.0

[node name="BoatTween" type="Tween" parent="."]

[connection signal="damaged" from="Boat" to="." method="_on_Boat_Update"]
[connection signal="on_queue_free" from="Boat" to="." method="_on_Boat_on_queue_free"]
[connection signal="body_entered" from="Boat/AreaDetection" to="BehaviorTree/BTSelector/AttackSelector/isPlayerClose" method="_on_AreaDetection_body_entered"]
[connection signal="body_entered" from="Boat/AreaDetection" to="BehaviorTree/BTSelector/AttackSelector/moveShoot" method="_on_AreaDetection_body_entered"]
[connection signal="body_entered" from="Boat/AreaDetection" to="BehaviorTree/BTSelector/PatrolSelector/isNotNearIsland" method="_on_AreaDetection_body_entered"]
[connection signal="body_exited" from="Boat/AreaDetection" to="BehaviorTree/BTSelector/AttackSelector/isPlayerClose" method="_on_AreaDetection_body_exited"]
[connection signal="body_exited" from="Boat/AreaDetection" to="BehaviorTree/BTSelector/AttackSelector/moveShoot" method="_on_AreaDetection_body_exited"]
[connection signal="body_exited" from="Boat/AreaDetection" to="BehaviorTree/BTSelector/PatrolSelector/isNotNearIsland" method="_on_AreaDetection_body_exited"]
